# RAG-Driven-Generative-AI

./: .gitignore  CLAUDE.md  pyproject.toml
Chapter01/: RAG_Overview.ipynb
Chapter02/: 1_Data_collection_preparation.ipynb  2_Embeddings_vector_store.ipynb  3_Augmented_Generation.ipynb  llm.txt
Chapter03/: Deep_Lake_LlamaIndex_OpenAI_RAG.ipynb  learning_llamaindex.md
Chapter03/data/: 180406985.txt  Computer_vision.txt  Convolutional_neural_network.txt  Object_detection.txt  Unmanned_aerial_vehicle.txt  VisDrone-Dataset.txt  VisDrone2018-MOT-toolkit.txt  Zhu_VisDrone-DET2018_The_Vision_Meets_Drone_Object_Detection_in_Image_Challenge_ECCVW_2018_paper.txt  article_10.txt  article_11.txt  article_12.txt  article_15.txt  article_16.txt  article_17.txt  article_19.txt  article_20.txt  article_21.txt  article_23.txt  article_24.txt  article_9.txt
Chapter04/: QnA.md
Chapter05/: Adaptive_RAG.ipynb  deeplake_vs_pinecone.md  expert_feedback.txt
Chapter06/: Pipeline_1_Collecting_and_preparing_the_dataset.ipynb  Pipeline_2_Scaling_a_Pinecone_Index.ipynb  Pipeline_3_RAG_Generative_AI.ipynb
Chapter07/: Knowledge_Graph__Deep_Lake_LlamaIndex_OpenAI_RAG.ipynb  Marketing_citations.txt  Marketing_urls.txt  Wikipedia_API.ipynb
Chapter08/: Dynamic_RAG_with_Chroma_and_Hugging_Face.ipynb
