[project]
name = "rag-driven-generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.0",
    "deeplake<4.0",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "markdown>=3.9",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
