[project]
name = "rag-driven-generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.0",
    "deeplake<4.0",
    "ipykernel>=7.1.0",
    "llama-index>=0.10.45.post1",
    "llama-index-vector-stores-chroma>=0.4.2",
    "lxml>=6.0.2",
    "markdown>=3.9",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "tabulate>=0.9.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
